--- a/templates/authentication.html
+++ b/templates/authentication.html
@@ -3,8 +3,8 @@
 <body>
     <h1>
         you are not authenticated to access this page ...
-        <a href = "{% url 'signup' %}" >
-        <button type="button" class="btn btn-primary"> Signup Now</button></a>
+        <a href = "{% url 'login' %}" >
+        <button type="button" class="btn btn-primary"> Login Now</button></a>
     </h1>
 </body>
 
